--- a/META.yml
+++ b/META.yml
@@ -25,7 +25,8 @@ requires:
 resources:
   license: http://opensource.org/licenses/gpl-license.php
 version: '0.04'
-x_module_install_rtx_version: 0.34_04
+x_module_install_rtx_version: '0.36'
 x_requires_rt: 4.0.0
 x_requires_rt_plugins:
+  - RT::Extension::LDAPImport
   - RT::Extension::MergeUsers
