--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'RT-Extension-LDAPImport-MultiEmail Extension'
+abstract: 'RT-LDAPImport-MultiEmail Extension'
 author:
   - 'Best Practical Solutions, LLC <modules@bestpractical.com>'
 build_requires:
@@ -13,20 +13,18 @@ license: gpl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
-name: RT-Extension-LDAPImport-MultiEmail
+name: RT-LDAPImport-MultiEmail
 no_index:
   directory:
     - inc
     - t
 requires:
-  RT::Extension::LDAPImport: 0
   RT::Extension::MergeUsers: 0
   perl: 5.8.3
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: '0.04'
-x_module_install_rtx_version: '0.36'
-x_requires_rt: 4.0.0
+version: '0.05'
+x_module_install_rtx_version: 0.34_04
+x_requires_rt: 4.4.0
 x_requires_rt_plugins:
-  - RT::Extension::LDAPImport
   - RT::Extension::MergeUsers
